--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -15,12 +15,12 @@
 		<style type="text/css">
 			.mui-bar-tab .mui-tab-item {
 				/*按钮颜色*/
-				color: white;
+				color: gray;
 			}
 
 			.mui-bar-tab .mui-tab-item.mui-active {
 				/*按钮点击后的颜色*/
-				color: yellow;
+				color: rgb(70,195,250);
 			}
 		</style>
 	</head>
@@ -31,7 +31,7 @@
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav class="mui-bar mui-bar-tab common-background-bar">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="tab_zone.html">
-				<span class="mui-icon mui-icon-star"><span class="mui-badge"style="color: red;">1</span></span>
+				<span class="mui-icon mui-icon-star"><span class="mui-badge">1</span></span>
 				<span class="mui-tab-label">空间</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="tab_knowledge.html">
