--- a/JiaoBaoYun-hb/html/tab_zone.html
+++ b/JiaoBaoYun-hb/html/tab_zone.html
@@ -6,16 +6,23 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../css/utils/common.css" />
-		<link rel="stylesheet" href="../css/mine/mine.css" />
+		<!--<link rel="stylesheet" href="../css/utils/common.css" />
+		<link rel="stylesheet" href="../css/mine/mine.css" />-->
 		<script type="text/javascript" src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/utils/events.js"></script>
+		<script src="../js/main/slide_navigation.js"> </script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<h1 class="mui-title common-color-white common-font-family-Regular">空间</h1>
 		</header>
+		<script>
+		mui.plusReady(function(){
+			slideNavigation.add('index-menu.html',200);
+		})
+	</script>
 	</body>
+	
 
 </html>
