--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/utils/common.css" />
-
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/utils/Statusbar.js" ></script>
-		<script type="text/javascript" src="../js/index.js"></script>
-
-		<style type="text/css">
+		<!--<script type="text/javascript" src="../js/index.js"></script>-->
+		<script src="../js/main/slide_navigation.js"></script>
+		<!--<style type="text/css">
 			.mui-bar-tab .mui-tab-item {
 				/*按钮颜色*/
 				color: gray;
@@ -21,15 +19,16 @@
 			.mui-bar-tab .mui-tab-item.mui-active {
 				/*按钮点击后的颜色*/
 				color: rgb(70,195,250);
-			}
+			}-->
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar">
+			<h1 id="title" class="mui-title">空间</h1>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
-		<nav class="mui-bar mui-bar-tab common-background-bar">
+		<nav  class="mui-bar mui-bar-tab common-background-bar">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="tab_zone.html">
 				<span class="mui-icon mui-icon-star"><span class="mui-badge">1</span></span>
 				<span class="mui-tab-label">空间</span>
@@ -49,5 +48,76 @@
 
 		</nav>
 	</body>
-
+		<script src="../js/mui.min.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			 //mui初始化
+			mui.init();
+			var subpages = ['tab_zone.html', 'tab_clip.html', 'tab_knowledge.html', 'tab_cloud.html'];
+			var subpage_style = {
+				top: '45px',
+				bottom: '51px'
+			};
+			
+			var aniShow = {};
+			
+			 //创建子页面，首个选项卡页面显示，其它均隐藏；
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				for (var i = 0; i < 4; i++) {
+					var temp = {};
+					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
+					if (i > 0) {
+						sub.hide();
+					}else{
+						temp[subpages[i]] = "true";
+						mui.extend(aniShow,temp);
+					}
+					self.append(sub);
+				}
+			});
+			 //当前激活选项
+			var activeTab = subpages[0];
+			var title = document.getElementById("title");
+			 //选项卡点击事件
+			mui('.mui-bar-tab').on('tap', 'a', function(e) {
+				var targetTab = this.getAttribute('href');
+				if (targetTab == activeTab) {
+					return;
+				}
+				//更换标题
+				title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//显示目标选项卡
+				//若为iOS平台或非首次显示，则直接显示
+				if(mui.os.ios||aniShow[targetTab]){
+					plus.webview.show(targetTab);
+				}else{
+					//否则，使用fade-in动画，且保存变量
+					var temp = {};
+					temp[targetTab] = "true";
+					mui.extend(aniShow,temp);
+					plus.webview.show(targetTab,"fade-in",300);
+				}
+				//隐藏当前;
+				plus.webview.hide(activeTab);
+				//更改当前活跃的选项卡
+				activeTab = targetTab;
+			});
+			 //自定义事件，模拟点击“首页选项卡”
+			document.addEventListener('gohome', function() {
+				var defaultTab = document.getElementById("defaultTab");
+				//模拟首页点击
+				mui.trigger(defaultTab, 'tap');
+				//切换选项卡高亮
+				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
+				if (defaultTab !== current) {
+					current.classList.remove('mui-active');
+					defaultTab.classList.add('mui-active');
+				}
+			});
+	</script>
+	<script>
+		mui.plusReady(function(){
+			slideNavigation.add('index-menu.html',200)
+		})
+	</script>
 </html>
