--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -25,21 +25,21 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar">
-			<h1 id="title" class="mui-title">空间</h1>
+			<h1 id="title" class="mui-title">家校圈</h1>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav  class="mui-bar mui-bar-tab common-background-bar">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="tab_zone.html">
 				<span class="mui-icon mui-icon-star"><span class="mui-badge">1</span></span>
-				<span class="mui-tab-label">空间</span>
+				<span class="mui-tab-label">家校圈</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="tab_knowledge.html">
 				<span class="mui-icon mui-icon-help"></span>
-				<span class="mui-tab-label">求知</span>
+				<span class="mui-tab-label">问答</span>
 			</a>
 			<a class="mui-tab-item" href="tab_clip.html">
-				<span class="mui-icon mui-icon-chatboxes"></span>
-				<span class="mui-tab-label">剪辑</span>
+				<span class="mui-icon mui-icon-videocam"></span>
+				<span class="mui-tab-label">视频</span>
 			</a>
 			<a class="mui-tab-item" href="tab_cloud.html">
 				<span class="mui-icon mui-icon-chatbubble"></span>
