--- a/JiaoBaoYun-hb/html/index-menu.html
+++ b/JiaoBaoYun-hb/html/index-menu.html
@@ -7,6 +7,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../css/mui.min.css">
+		<link rel="stylesheet" href="../css/home/index-menu.css" />
 	
 		<style type="text/css">
 			body,.mui-content{
@@ -30,16 +31,17 @@
 	</head>
 
 	<body>
-		<script>
-			console.log('加载')
-		</script>
 		<div class="mui-content">
-			<div class="title">侧滑导航</div>
 			
-			<div class="title" style="margin-bottom: 25px;"><img src="../image/slide_navigation/img3.jpg" />我的</div>
+			<div class="title" style="margin-bottom: 25px; text-align: center;">
+				<img src="../image/slide_navigation/img3.jpg" class="head-portrait"/><br />
+				<h4>孟婆</h4>
+				<sub>初中|语文老师</sub>
+			</div>
 			<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted" style="color: #ddd;">
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" open-type="common" href="examples/pullrefresh_main.html">
+						<span class="mui-icon iconfont icon-liaotian1 "></span>
 						你的
 					</a>
 				</li>
