--- a/JiaoBaoYun-hb/html/index-menu.html
+++ b/JiaoBaoYun-hb/html/index-menu.html
@@ -7,7 +7,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../css/mui.min.css">
-		<link rel="stylesheet" href="../css/home/index-menu.css" />
+		<link rel="stylesheet" href="../css/home/index-menu.css" /><br />
+		<link rel="stylesheet" href="../css/iconfont/iconfont.css"/>
 	
 		<style type="text/css">
 			body,.mui-content{
@@ -41,28 +42,27 @@
 			<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted" style="color: #ddd;">
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" open-type="common" href="examples/pullrefresh_main.html">
-						<span class="mui-icon iconfont icon-liaotian1 "></span>
-						你的
+						<span class="mui-icon iconfont icon-liaotian app-icon"></span>
+						应用
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" open-type="common" href="examples/offcanvas-drag-left.html">
-						他的
+						<span class="mui-icon iconfont icon-xie record-icon"></span>
+						录入班级学生资料
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" href="examples/switches.html">
-						其他
+						<span class="mui-icon iconfont icon-shezhi set-icon"></span>
+						设置
 					</a>
 				</li>
-				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" href="examples/tableviews-with-swipe.html">
-						不知道
-					</a>
-				</li>
+			
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" href="examples/tab-with-viewpagerindicator.html">
-						啊
+						<span class="mui-icon iconfont icon-about about-icon"></span>
+						关于
 					</a>
 				</li>
 			</ul>
