--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -38,7 +38,7 @@
 				<span class="mui-icon mui-icon-help"></span>
 				<span class="mui-tab-label">求知</span>
 			</a>
-			<a class="mui-tab-item" href="tab_clip.html">
+			<a class="mui-tab-item" href="clip/clip_main.html">
 				<span class="mui-icon mui-icon-chatboxes"></span>
 				<span class="mui-tab-label">剪辑</span>
 			</a>
