--- a/JiaoBaoYun-hb/html/clip/clip_main.html
+++ b/JiaoBaoYun-hb/html/clip/clip_main.html
@@ -8,38 +8,29 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<!--引入系统样式-->
 		<link rel="stylesheet" href="../../css/mui.min.css" />
+		<script type="text/javascript" src="../../js/mui.min.js" ></script>
+		<script type="text/javascript" src="../../js/mui.js" ></script>
 		<!--引入共用样式-->
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<!--<script type="text/javascript" src="../../js/main/slide_navigation.js" ></script>-->
-		<script type="text/javascript" src="../../js/main/slide_navigation.js" ></script>
-		<script type="text/javascript" src="../../js/utils/events.js" ></script>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav common-background-bar">
-			<h1 class="mui-title common-color-white common-font-family-Regular">剪辑</h1>
-		</header>
 		<div class="mui-content"></div>
 	</body>
-	<script src="js/mui.min.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
-//			gestureConfig:{
-//				doubletap:true
-//			},
+			gestureConfig:{
+				doubletap:true
+			},
 			subpages:[{ 
 				url:'clip_sub.html',
 				id:'clip_sub.html',
 				styles:{
-					top: '95px',
-					bottom: localStorage.getItem('$Statusbar'),
+//					top: '0px',
+//					bottom: localStorage.getItem('$Statusbar'),
 				}
 			}] 
-		});
-		
-		mui.plusReady(function(){
-			slideNavigation.add('index-menu.html',100);
 		});
 	
 //		var contentWebview = null;
