--- a/JiaoBaoYun-hb/html/tab_cloud.html
+++ b/JiaoBaoYun-hb/html/tab_cloud.html
@@ -3,19 +3,30 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>云盘</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/utils/common.css" />
 		<link rel="stylesheet" href="../css/mine/mine.css" />
 		<script type="text/javascript" src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/utils/events.js"></script>
-		<script src="../js/main/slide_navigation.js"> </script>
+		<script src="../js/main/slide_navigation.js">
+		</script>
 	</head>
 
 	<body>
+
 	</body>
 	<script>
+		mui.plusReady(function() {
+			//加载云盘页面
+			mui.init({
+				subpages: [{
+					url: 'cloud/cloud_main.html',
+					id: 'cloud/cloud_main.html',
+				}]
+			});
+		})
 	</script>
 
 </html>
