--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -6,11 +6,11 @@
 		<title></title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/utils/common.css" />
+		<link rel="stylesheet" href="../css/iconfont/iconfont.css" />
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/utils/Statusbar.js" ></script>
 		<script type="text/javascript" src="../js/index.js"></script>
 		<script src="../js/main/slide_navigation.js"></script>
-		</style>
 	</head>
 
 	<body>
@@ -33,7 +33,7 @@
 				<span class="mui-tab-label">视频</span>
 			</a>
 			<a class="mui-tab-item" href="tab_cloud.html">
-				<span class="mui-icon mui-icon-chatbubble"></span>
+				<span class="mui-icon iconfont icon-yunpan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
 
