--- a/JiaoBaoYun-hb/html/cloud/cloud_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_sub.html
@@ -280,7 +280,7 @@
 					mui.confirm('确认删除？', '提示', btnArray, function(e) {
 						if(e.index == 1) {
 							//确定删除
-							document.getElementById("File").removeChild(document.getElementById(fileId));
+							document.getElementById("File").removeChild(document.getElementById(fileInfo.Id));
 							mui.toast('删除成功');
 						} else {
 							//不删除
