--- a/JiaoBaoYun-hb/html/zone_sub.html
+++ b/JiaoBaoYun-hb/html/zone_sub.html
@@ -22,7 +22,7 @@
 			
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: #007aff;
-				border-bottom: 0px solid red;
+				border-bottom: 1px solid 007aff;
 				background: 0 0
 			}
 		</style>
@@ -60,7 +60,7 @@
 				<h4>
 					<img  src="../image/tab_zone/u131.png" />
 					<span  class="parent">家长圈</span>
-					<hr class="vertical-line" />
+					<!--<hr class="vertical-line" />-->
 					<div style="padding: 10px 10px 10px 100px;margin-top: -45px;">
 						
 				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-inverted">
