--- a/JiaoBaoYun-hb/html/clip/clip_main.html
+++ b/JiaoBaoYun-hb/html/clip/clip_main.html
@@ -9,7 +9,7 @@
 		<!--引入系统样式-->
 		<link rel="stylesheet" href="../../css/mui.min.css" />
 		<script type="text/javascript" src="../../js/mui.min.js" ></script>
-		<script type="text/javascript" src="../../js/mui.js" ></script>
+		<!--<script type="text/javascript" src="../../js/mui.js" ></script>-->
 		<!--引入共用样式-->
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 	</head>
@@ -27,7 +27,7 @@
 				url:'clip_sub.html',
 				id:'clip_sub.html',
 				styles:{
-//					top: '0px',
+//					top: '45px',
 //					bottom: localStorage.getItem('$Statusbar'),
 				}
 			}] 
