--- a/JiaoBaoYun-hb/html/clip/clip_sub.html
+++ b/JiaoBaoYun-hb/html/clip/clip_sub.html
@@ -7,11 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="css/mui.min.css">
 		<!--引入系统样式-->
 		<link rel="stylesheet" href="../../css/mui.min.css" />
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
-		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script type="text/javascript" src="../../js/utils/carouselControl.js"></script>
 		<link rel="stylesheet" type="text/css" href="../../css/utils/common.css" />
 		<style type="text/css">
@@ -56,7 +54,7 @@
 				<div style="height: 10px;"></div>
 				<!--数据列表-->
 				<div id="slider" class="mui-slider">
-					<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 						<div class="mui-scroll">
 							<a class="mui-control-item mui-active" href="#item1mobile">
 								推荐
@@ -93,8 +91,8 @@
 								<li class="mui-table-view-cell mui-media mui-col-xs-6" style="padding: 10px;">
 									<img class="mui-icon-image" src="../../image/clip/u292.png" style="top: 20px;left: 20px;right: 20px;height: 80px;padding: 0px;" />
 									<div class="notice-content" style="font-size: 13px;">纸上谈兵：纸上谈兵是指在纸面上谈论打战纸上谈兵是指在纸面上谈论打战纸上谈兵是指在纸面上谈论打战</div>
-
 								</li>
+							</ul>
 						</div>
 						<div id="item2mobile" class="mui-slider-item mui-control-content">
 							<ul class="mui-table-view">
@@ -116,6 +114,7 @@
 				</div>
 			</div>
 		</div>
+
 		<script>
 			mui.init({
 				pullRefresh: {
@@ -129,12 +128,9 @@
 					}
 				}
 			});
-			mui('.mui-scroll-wrapper').scroll({
-				indicators: true, //是否显示滚动条
-			});
-
+			
 			mui.plusReady(function() {
-				var titles = ["幸福是可以一起睡觉", "幸福是可以一起吃饭", "幸福是可以一起拉屎"];
+				var titles = ["幸福是可以一起睡觉", "幸福是可以一起吃饭", "幸福是可以一起"];
 				//加黑条
 				addStrip(getImgArray());
 				//加图片
@@ -158,7 +154,6 @@
 						li.style.padding = '10px';
 						li.innerHTML = '<img class="mui-icon-image" src="../../image/clip/u292.png" style="top: 20px;left: 20px;right: 20px;height: 80px;padding: 0px;" />\
 									<div class="notice-content" style="font-size: 13px;">纸上谈兵：纸上谈兵是指在纸面上谈论打战纸上谈兵是指在纸面上谈论打战纸上谈兵是指在纸面上谈论打战</div>';
-
 						//下拉刷新，新纪录插到最前面；
 						table.insertBefore(li, table.firstChild);
 					}
@@ -174,8 +169,10 @@
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for(var i = cells.length, len = i + 10; i < len; i++) {
+					for(var i = cells.length, len = i + 20; i < len; i++) {
 						var li = document.createElement('li');
+//						li.className = 'mui-table-view-cell';
+//						li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
 						li.className = 'mui-table-view-cell mui-media mui-col-xs-6';
 						li.style.padding = '10px';
 						li.innerHTML = '<img class="mui-icon-image" src="../../image/clip/u292.png" style="top: 20px;left: 20px;right: 20px;height: 80px;padding: 0px;" />\
@@ -184,13 +181,18 @@
 					}
 				}, 1500);
 			}
+			if(mui.os.plus) {
+				mui.plusReady(function() {
+					setTimeout(function() {
+						mui('#pullrefresh').pullRefresh().pullupLoading();
+					}, 1000);
 
-			//			mui.plusReady(function() {
-			//				//					setTimeout(function() {
-			//				//						mui('#pullrefresh').pullRefresh().pullupLoading();
-			//				//					}, 1000);
-			//
-			//			});
+				});
+			} else {
+				mui.ready(function() {
+					mui('#pullrefresh').pullRefresh().pullupLoading();
+				});
+			}
 		</script>
 	</body>
 
