--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -28,7 +28,7 @@
 				<span class="mui-icon mui-icon-help"></span>
 				<span class="mui-tab-label">问答</span>
 			</a>
-			<a class="mui-tab-item" href="clip/clip_main.html">
+			<a class="mui-tab-item" href="clip/clip_sub.html">
 				<span class="mui-icon mui-icon-chatboxes"></span>
 				<span class="mui-tab-label">视频</span>
 			</a>
@@ -44,6 +44,6 @@
 	mui.plusReady(function(){
 		slideNavigation.add('index-menu.html',200)
 })
-		
+
 	</script>
 </html>
