--- a/JiaoBaoYun-hb/html/zone_sub.html
+++ b/JiaoBaoYun-hb/html/zone_sub.html
@@ -33,7 +33,7 @@
 			<div class="mui-scroll">
 				<!--第一个列表-->
 				<ul class="mui-table-view">
-					<li class="mui-table-view-cell mui-media">
+					<li id="tarClass" class="mui-table-view-cell mui-media">
 
 						<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png">
 						<p class="time">10月19</p>
@@ -65,7 +65,7 @@
 						
 				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-inverted">
 					
-					<a class="mui-control-item mui-active" href="#item1">
+					<a class="mui-control-item mui-active" href="">
 				1001班<span class="mui-badge mui-badge-danger custom-badge1"  >3</span>
 			</a>
 					<a class="mui-control-item" href="#item2">
@@ -235,5 +235,12 @@
 			}
 		</script>
 	</body>
+	<script>
+	mui.plusReady(function(){
+		var tar=document.getElementById('tarClass');
+		events.jumpPage(tar,'/html/quan/class-space.html');
+	})
+		
+	</script>
 
 </html>
