--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -19,15 +19,13 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">1002班</h1>
+		    <img src="../../image/clip.png" style="width: ;" />
 		    <a  class="mui-icon iconfont icon-xie1 mui-pull-right" ></a>
 		    <a class="mui-icon iconfont icon-renren  mui-pull-right"></a>
 		</header>
 		
 		<script>
-			mui.plusReady(function(){
-				console.log('what wrong');
-				events.initSubPage('classSpace-sub.html')
-			})
+			events.initSubPage('classSpace-sub.html')
 		</script>
 			
 	</body>
