--- a/JiaoBaoYun-hb/html/zone_sub.html
+++ b/JiaoBaoYun-hb/html/zone_sub.html
@@ -22,7 +22,7 @@
 			
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: #007aff;
-				border-bottom: 1px solid 007aff;
+				border-bottom: 0px solid red;
 				background: 0 0
 			}
 		</style>
@@ -60,7 +60,7 @@
 				<h4>
 					<img  src="../image/tab_zone/u131.png" />
 					<span  class="parent">家长圈</span>
-					<!--<hr class="vertical-line" />-->
+					<hr class="vertical-line" />
 					<div style="padding: 10px 10px 10px 100px;margin-top: -45px;">
 						
 				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-inverted">
@@ -82,7 +82,7 @@
 					<button id="btn2" class="class2" onclick="secondbtn(this)">1002班<span class="mui-badge mui-badge-danger custom-badge2" >1</span></button>-->
 				</h4>
 				<!--第二个列表-->
-				<div>
+				<div style="margin-top: -10px;">
 					<div id="item1" class="mui-control-content mui-active">
 
 						<ul class="mui-table-view">
@@ -139,7 +139,7 @@
 								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月20</p>
 								<div class="mui-media-body" ;>
-									张雨欣
+									李丽
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
 								</div>
 
@@ -147,10 +147,9 @@
 							<li class="mui-table-view-cell mui-media">
 
 								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
-									李芸
+									张曦曦
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
 
@@ -158,10 +157,9 @@
 							<li class="mui-table-view-cell mui-media">
 
 								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月19</p>
 								<div class="mui-media-body" ;>
-									张雨欣
+									刘若曦
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
 								</div>
 
@@ -171,7 +169,7 @@
 								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
-									李芸
+									安琪
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
 
