--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -7,32 +7,33 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
-		<script src="../../js/utils/events.js"></script>
 	</head>
-
+	
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">1002班</h1>
-		    <a id="write" class="mui-icon iconfont icon-xie1 mui-pull-right" ></a>
-		    <a id="group" class="mui-icon iconfont icon-renren  mui-pull-right"></a>
+		    <h1 class="mui-title">班级动态</h1>
+		    <a class="mui-icon mui-pull-right">完成</a>
 		</header>
+		<div class="mui-content">
+		    <textarea>
+		    	
+		    </textarea>
+		    <div style="text-align: center;">
+			    <a class="mui-icon iconfont mui-xia" style="width: 50px;"></a>
+			    <p>拍照</p>
+		    </div>
+		    <div>
+		    	<a class="mui-icon mui-icon-"></a>
+		    </div>
 		
-		<script>
-			events.initSubPage('classSpace-sub.html')
-			mui.plusReady(function(){
-				var write=document.getElementById('write');
-				events.jumpPage(write,'class-dynamic.html');
-			})
-
-		</script>
-			
+		</div>
 	</body>
 
 </html>
