--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -13,30 +13,41 @@
 		<script type="text/javascript">
 			mui.init()
 		</script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/utils/camera.js"></script>
+		<script src="../../js/utils/files.js"></script>
+		<script src="../../js/utils/ASFiles.js"></script>
 	</head>
 	
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">班级动态</h1>
-		    <a class="mui-icon mui-pull-right">完成</a>
+		    <a class="mui-icon iconfont icon-jia mui-pull-right"></a>
 		</header>
 		<div class="mui-content">
-			<div style="height: 300px;">
-				 <textarea>
-			    	
+			<div  class="input-content">
+				<textarea placeholder="请输入内容">
 			    </textarea>
-			    <div class="take_pic">
-				    <a class="iconfont icon-xiangji" style=" font-size: 70px;" ></a>
-				    <!--<p>拍照</p>-->
+			    <div id="take_pic" class="take_pic">
+				    <a class="mui-icon iconfont icon-xiangji"></a>
 			    </div>
-			    <div class="add_file">
-			    	<a class="mui-icon iconfont icon-jia" style="font-size:70px;"></a>
+			    <div id="add_file" class="add_file">
+			    	<a class="mui-icon iconfont icon-jia"></a>
 			    </div>
 			</div>
-		   
-		
 		</div>
 	</body>
+	<script>
+	mui.plusReady(function(){
+		events.addTap('take_pic',function(){
+			camera.getPic(camera.getCamera());
+		})
+		events.addTap('add_file',function(){
+			asFiles.openASFiles()
+		})
+	})
+		
+	</script>
 
 </html>
