--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -29,7 +29,10 @@
 			mui.plusReady(function(){
 				var write=document.getElementById('write');
 				events.jumpPage(write,'class-dynamic.html');
+				var group=document.getElementById('group');
+				events.jumpPage(group,'class-group.html');
 			})
+			
 
 		</script>
 			
