--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -8,18 +9,18 @@
 		<link rel="stylesheet" href="../css/utils/common.css" />
 		<link rel="stylesheet" href="../css/iconfont/iconfont.css" />
 		<script src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/utils/Statusbar.js" ></script>
+		<script type="text/javascript" src="../js/utils/Statusbar.js"></script>
 		<script type="text/javascript" src="../js/index.js"></script>
 		<script src="../js/main/slide_navigation.js"></script>
 	</head>
 
 	<body>
-		
+
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<h1 id="title" class="mui-title">家校圈</h1>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
-		<nav  class="mui-bar mui-bar-tab common-background-bar">
+		<nav class="mui-bar mui-bar-tab common-background-bar">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="tab_zone.html">
 				<span class="mui-icon mui-icon-star"><span class="mui-badge">1</span></span>
 				<span class="mui-tab-label">家校圈</span>
@@ -39,11 +40,21 @@
 
 		</nav>
 	</body>
-		<script src="../js/mui.min.js"></script>
+	<script src="../js/mui.min.js"></script>
 	<script>
-	mui.plusReady(function(){
-		slideNavigation.add('index-menu.html',200)
-})
-
+		mui.plusReady(function() {
+			slideNavigation.add('index-menu.html', 200)
+//			document.getElementById('aboutme').addEventListener('tap', function() {
+//				mui.openWindow({
+//					url: 'quan/aboutme.html',
+//					id: 'quan/aboutme.html',
+//					styles: {
+//						top: '0px', //设置距离顶部的距离
+//						bottom: '0px'
+//					}
+//				});
+//			})
+		})
 	</script>
+
 </html>
