--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-		
+
 		<header class="mui-bar mui-bar-nav common-background-bar">
 			<h1 id="title" class="mui-title">家校圈</h1>
 		</header>
@@ -32,7 +32,7 @@
 				<span class="mui-icon mui-icon-chatboxes"></span>
 				<span class="mui-tab-label">视频</span>
 			</a>
-			<a class="mui-tab-item" href="tab_cloud.html">
+			<a class="mui-tab-item" href="cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
