--- a/JiaoBaoYun-hb/html/clip/clip_sub.html
+++ b/JiaoBaoYun-hb/html/clip/clip_sub.html
@@ -141,6 +141,13 @@
 					interval: 5000
 				});
 			});
+			var getImgArray=function(){
+				var imgArray=new Array();
+				imgArray.push("../../image/clip/u292.png");
+				imgArray.push("../../image/clip/u296.png");
+				imgArray.push("../../image/clip/u298.png");
+				return imgArray;
+			}
 			/**
 			 * 下拉刷新具体业务实现
 			 */
