--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -43,8 +43,8 @@
 		//云盘子页面
 		mui.init({
 			subpages: [{
-				url: 'cloud_sub.html',
-				id: 'cloud_sub.html',
+				url: 'storage_sub.html',
+				id: 'storage_sub.html',
 				styles: {
 					top: '45px',
 					bottom: '0px',
