与我先关样式调整

--- a/JiaoBaoYun-hb/html/tab-zone.html
+++ b/JiaoBaoYun-hb/html/tab-zone.html
@@ -75,7 +75,7 @@
 
 				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-inverted">
 
-					<a class="mui-control-item mui-active" href="">
+					<a class="mui-control-item mui-active" href="#item1">
 				1001班<span class="mui-badge mui-badge-danger custom-badge1"  >3</span>
 			</a>
 					<a class="mui-control-item" href="#item2">
