调整云盘主页

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -122,7 +122,7 @@
 				/*功能名字右侧树竖线*/
 				position: absolute;
 				right: 0;
-				top: 10%;
+				top: 1%;
 				width: 1px;
 				background: #A9A9A9;
 				height: 50px;
@@ -163,15 +163,14 @@
 					</div>
 					<!--云存储-->
 					<ul id="cloudstorage" class="mui-table-view mui-grid-view " style="background:white;padding: 10px;margin: 0;margin-top: 11px;padding-top: 7px;padding-bottom: 7px;">
-						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;position: absolute;">
 							<div style="font-weight: bold;">
-								<div>云</div>
 								<div>存</div>
 								<div>储</div>
 								<div class="cloud-line"></div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell mui-media mui-col-sm-9 mui-col-xs-9 " style="padding: 5px;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-9 mui-col-xs-9 " style="padding: 5px;margin: 0;margin-left: 10%;">
 							<div class="mui-row">
 								<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
 									<img class="cloud-bottom-imge" src="../../image/cloud/cloud_folder.png" />
@@ -182,8 +181,9 @@
 									<p class="mui-ellipsis">H5基础视频</p>
 								</div>
 								<div class="mui-col-sm-4 mui-col-xs-4 cloud-text-align-center">
-									<img class="cloud-bottom-imge" src="../../image/cloud/cloud_folder.png" />
-									<p class="mui-ellipsis">林俊杰Music</p>
+									<p class="mui-icon mui-icon-plusempty"style="font-size: 50px;margin-top: 4px;"></p>
+									<!--<img class="cloud-bottom-imge" src="../../image/cloud/cloud_folder.png" />
+									<p class="mui-ellipsis">林俊杰Music</p>-->
 								</div>
 							</div>
 						</li>
@@ -193,15 +193,14 @@
 					</ul>
 					<!--云档案-->
 					<ul id="cloudrecord" class="mui-table-view mui-grid-view" style="background:white;padding: 10px;margin: 0;margin-top: 10px;padding-top: 10px;padding-bottom: 10px;">
-						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;position: absolute;">
 							<div style="font-weight: bold;">
-								<div>云</div>
 								<div>档</div>
 								<div>案</div>
 								<div class="cloud-line"></div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell mui-media mui-col-sm-11 mui-col-xs-11 " style="padding: 5px;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-11 mui-col-xs-11 " style="padding: 5px;margin: 0;margin-left: 8%;">
 							<div class="mui-row">
 								<div class="mui-col-sm-3 mui-col-xs-3 cloud-text-align-center" value="0">
 									<div class="cloud-bottom-imge2-bg" style="background: #6C7CC9;">
@@ -220,15 +219,14 @@
 					</ul>
 					<!--云应用-->
 					<ul id="cloudapps" class="mui-table-view mui-grid-view" style="background:white;padding: 10px;margin: 0;margin-top: 10px;padding-top: 10px;padding-bottom: 10px;">
-						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;position: absolute;">
 							<div style="font-weight: bold;">
-								<div>云</div>
 								<div>应</div>
 								<div>用</div>
 								<div class="cloud-line"></div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell mui-media mui-col-sm-11 mui-col-xs-11 " style="padding: 5px;margin: 0;">
+						<li class="mui-table-view-cell mui-media mui-col-sm-11 mui-col-xs-11 " style="padding: 5px;margin: 0;margin-left: 8%;">
 							<div class="mui-row">
 								<div class="mui-col-sm-3 mui-col-xs-3 cloud-text-align-center" value="0">
 									<div class="cloud-bottom-imge2-bg" style="background: #5CAAE8;">
@@ -254,6 +252,12 @@
 									</div>
 									<p class="mui-ellipsis">作业批改</p>
 								</div>
+								<!--<div class="mui-col-sm-3 mui-col-xs-3 cloud-text-align-center" value="3">
+									<div class="cloud-bottom-imge2-bg" style="background: #31C27C;">
+										<img class="cloud-bottom-imge2-bg" src="../../image/cloud/cloud_homework.png" />
+									</div>
+									<p class="mui-ellipsis">作业批改</p>
+								</div>-->
 							</div>
 						</li>
 					</ul>
