修改云盘-我的档案界面

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -296,7 +296,7 @@
 					var value = this.getAttribute("value");
 					switch(value) {
 						case "0": //XX档案
-							events.openNewWindow('record_student.html');
+							events.openNewWindow('record_student_main.html');
 							break;
 						case "1": //学习轨迹
 							events.openNewWindow('record_learningpath_main.html');
